@@ -14,12 +14,23 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+4.3pre2:
+
+- auto indent:
+  - align close bracket
+  - lisp close bracket rule
+  - don't indent >= 1
+  - deep indent
+  - investigate CL indent
+- some fastrepaint bugs
+- option to disable buffer local properties
+- hypersearch results & folds
+- more configurable file system browser
+  - at least, preserve column widths
+- CA+PLUS +: bad
+
 + 4.3 drivers:
 
-- ditch monospaced font optimization
-- some fastrepaint bugs
-- changing font size causes some problems
-- option to disable buffer local properties
 - backspace with virtual caret: needs tweaks
 - new file: explicit folding: type {{{: fold marker doesn't appear
 - finish code to hide caret on user input; enter is a problem
@@ -34,18 +45,13 @@ and quirks that I need to fix eventually.
   - text area transfer handler: opening files dependency
 - save help index
 - indent folding: fold marker not always updated
-- hypersearch results & folds
 - format: preserve comment chars at start
 - token values negative?
 - single line selection should not hide line highlight
 - jedit -encoding
-- filled cursor option
-- blink frequency option
 - why is still added to end of kill ring?
 - goToBuffer() -- if any parent has zero height or zero width...
-- better auto indent
 - save selection between buffer switch
-- more configurable file system browser
 - more accurate syntax highlighting
 - input methods
 - draganddrop patch
@@ -55,8 +61,6 @@ and quirks that I need to fix eventually.
 - S+INS, etc in swing controls
 - vfs: a way of running awt requests not all at end
 - wrapped dock buttons broken
-- CA+PLUS +: bad
-- SLASH -vs- / shortcut issue
 
 + docs:
 
